@@ -1,3 +1,9 @@
+Fri Jun 20 15:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
+
+        * bin/fuzz.pl:
+
+          Small bug in white space compaction.
+
 Fri Jun 20 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
 
         * bin/fuzz.pl:
